tests/errors/sem4.kt
fun main(){
    if (5) {
        println("Bad condition")
    }
}